Fixed a bug that would occur when a user attempted to paint on an already coloured pixel which would initiate a drag action and cause the brush to be stuck on. Made all canvas pixels unselectable. Added a default starting value to the colour picker so custom colours now work on firefox.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,9 @@ h1 {
 .canvas div {
   border-left: 1px solid black;
   border-top: 1px solid black;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 .grid-size,
